# mediareviewer

./: .gitignore  Dockerfile  LICENSE.md  README.md  dev.sh  docker-compose.nas.yml  docker-compose.yml  entrypoint.sh  initialprompt.md
.TODO/: backlog.md  lint-notes.md  open-questions.md  status.md
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: frontend.instructions.md  python.instructions.md
.github/workflows/: docker-publish.yml  pages.yml
backend/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/src/mediareviewer_api/: __init__.py  api.py  app.py  config.py
backend/src/mediareviewer_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/src/mediareviewer_api/services/: companion_actions.py  deletion_queue.py  media_scanner.py  review_config_store.py  thumbnail_cache.py
backend/tests/: test_app.py  test_batch.py  test_empty_trash.py  test_ffprobe.py  test_folder_browsing.py  test_logs.py  test_media_actions.py  test_media_items.py  test_media_scanner.py  test_review_paths.py  test_thumbnail_cache.py
docs/: _config.yml  architecture.md  index.md  lint-notes.md
docs/_includes/: head-custom.html
docs/api/: reference.md
docs/scripts/: generate-diagrams.sh
frontend/: eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  FolderBrowser.tsx  TrashProgressDialog.tsx  main.tsx  styles.css  useTheme.ts
frontend/src/api/: client.ts  types.ts
scripts/: docker-push.sh
(+4 files in other folders)
