[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mediareviewer-api"
version = "0.1.0"
description = "Flask API for the Media Reviewer application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "Flask>=3.1,<4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "ruff>=0.11,<0.12",
]

[project.scripts]
mediareviewer-api = "mediareviewer_api.app:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.setuptools.packages.find]
where = ["src"]
